<resources>
    <string name="app_name">Letterboxd</string>
    <string name="movie_image">Movie Image</string>
    <string name="movie_poster">movie poster</string>
    <string name="submit_review">Submit Review</string>
    <string name="write_your_review_here">Write your review here</string>
    <string name="movie_title">Movie Title</string>
    <string name="release_date">Release Date</string>
    <string name="welcome_user">Welcome, User!</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="save_changes">Save Changes</string>
    <string name="sign_out">Sign Out</string>
</resources>